# hooklistener-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  release.toml  skills-lock.json
.github/workflows/: ci.yml  codeql.yml  release.yml  update-homebrew.yml
homebrew-tap/: README.md
homebrew-tap/Formula/: hooklistener.rb
npm/scripts/: publish-npm.sh
scripts/: install.ps1  install.sh
src/: api.rs  app.rs  auth.rs  config.rs  errors.rs  logger.rs  main.rs  models.rs  syntax.rs  tunnel.rs  ui.rs  updater.rs
