[package]
name = "hooklistener-cli"
version = "0.1.0"
edition = "2024"
description = "A fast, terminal-based CLI for browsing webhooks, forwarding events, and exposing local servers"
license = "MIT"
repository = "https://github.com/hooklistener/hooklistener-cli"
homepage = "https://hooklistener.com"
readme = "README.md"
keywords = ["webhook", "cli", "tunnel", "tui", "hooklistener"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
exclude = [
    ".github/",
    "docs/",
    "npm/",
    "scripts/",
    "tests/",
]

[dependencies]
ratatui = "^0.29.0"
crossterm = "0.29"
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "ansi", "chrono"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
thiserror = "2.0"
arboard = "3.4"

[dev-dependencies]
mockito = "1.7"
tempfile = "3.15"

[workspace.metadata.dist]
# Configuration for cargo-dist release automation
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
installers = ["shell", "powershell"]
include = ["README.md"]
